[project]
name = "agentic_rag"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name="Vinay Kumar", email="vinugrd@gmail.com" }
]

requires-python = ">=3.12,<3.13"

dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.15",
  "aiosignal==1.4.0",
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "asttokens==3.0.0",
  "attrs==25.3.0",
  "backoff==2.2.1",
  "bcrypt==5.0.0",
  "beautifulsoup4==4.14.2",
  "build==1.3.0",
  "cachetools==6.2.0",
  "certifi==2025.8.3",
  "charset-normalizer==3.4.3",
  "chromadb==1.1.0",
  "click==8.3.0",
  "colorama==0.4.6",
  "coloredlogs==15.0.1",
  "dataclasses-json==0.6.7",
  "decorator==5.2.1",
  "distro==1.9.0",
  "durationpy==0.10",
  "executing==2.2.1",
  "filelock==3.19.1",
  "flatbuffers==25.9.23",
  "frozenlist==1.7.0",
  "fsspec==2025.9.0",
  "google-auth==2.41.1",
  "googleapis-common-protos==1.70.0",
  "greenlet==3.2.4",
  "grpcio==1.75.1",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "httpx-sse==0.4.1",
  "huggingface-hub==0.35.3",
  "humanfriendly==10.0",
  "idna==3.10",
  "importlib-metadata==8.7.0",
  "importlib-resources==6.5.2",
  "ipython==9.6.0",
  "ipython-pygments-lexers==1.1.1",
  "jedi==0.19.2",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "jsonschema==4.25.1",
  "jsonschema-specifications==2025.9.1",
  "kubernetes==34.1.0",
  "langchain==0.3.27",
  "langchain-community==0.3.30",
  "langchain-core==0.3.78",
  "langchain-ollama==0.3.10",
  "langchain-text-splitters==0.3.11",
  "langgraph==0.6.8",
  "langgraph-checkpoint==2.1.1",
  "langgraph-prebuilt==0.6.4",
  "langgraph-sdk==0.2.9",
  "langsmith==0.4.32",
  "markdown-it-py==4.0.0",
  "marshmallow==3.26.1",
  "matplotlib-inline==0.1.7",
  "mdurl==0.1.2",
  "mmh3==5.2.0",
  "mpmath==1.3.0",
  "multidict==6.6.4",
  "mypy-extensions==1.1.0",
  "numpy==2.3.3",
  "oauthlib==3.3.1",
  "ollama==0.6.0",
  "onnxruntime==1.23.0",
  "opentelemetry-api==1.37.0",
  "opentelemetry-exporter-otlp-proto-common==1.37.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
  "opentelemetry-proto==1.37.0",
  "opentelemetry-sdk==1.37.0",
  "opentelemetry-semantic-conventions==0.58b0",
  "orjson==3.11.3",
  "ormsgpack==1.10.0",
  "overrides==7.7.0",
  "packaging==25.0",
  "parso==0.8.5",
  "posthog==5.4.0",
  "prompt-toolkit==3.0.52",
  "propcache==0.3.2",
  "protobuf==6.32.1",
  "pure-eval==0.2.3",
  "pyasn1==0.6.1",
  "pyasn1-modules==0.4.2",
  "pybase64==1.4.2",
  "pydantic==2.11.9",
  "pydantic-core==2.33.2",
  "pydantic-settings==2.11.0",
  "pygments==2.19.2",
  "pypika==0.48.9",
  "pyproject-hooks==1.2.0",
  "pyreadline3==3.5.4",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.1",
  "pyyaml==6.0.3",
  "referencing==0.36.2",
  "regex==2025.9.18",
  "requests==2.32.5",
  "requests-oauthlib==2.0.0",
  "requests-toolbelt==1.0.0",
  "rich==14.1.0",
  "rpds-py==0.27.1",
  "rsa==4.9.1",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.8",
  "sqlalchemy==2.0.43",
  "stack-data==0.6.3",
  "sympy==1.14.0",
  "tenacity==9.1.2",
  "tiktoken==0.11.0",
  "tokenizers==0.22.1",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "typer==0.19.2",
  "typing-extensions==4.15.0",
  "typing-inspect==0.9.0",
  "typing-inspection==0.4.2",
  "urllib3==2.3.0",
  "uvicorn==0.37.0",
  "watchfiles==1.1.0",
  "wcwidth==0.2.14",
  "websocket-client==1.8.0",
  "websockets==15.0.1",
  "xxhash==3.6.0",
  "yarl==1.20.1",
  "zipp==3.23.0",
  "zstandard==0.25.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents"]

[tool.setuptools.package-data]
"your_package" = ["*.txt", "*.json"]